--- a/styles/index.css
+++ b/styles/index.css
@@ -4,10 +4,19 @@
 	list-style:none;
 	text-decoration:none;
 	font-family:"微软雅黑";
+
 }
 
 body{
 	background:#4a607b;
+	//color:#a9adb0;
+}
+
+.left{
+	float:left;
+}
+.right{
+	float:right;
 }
 
 a{
@@ -38,7 +47,7 @@ a{
 	position:absolute;
 	top:60px;
 	width:225px;
-	height:490px;
+	height:463px;
 	border-top:2px solid #4a607b;
 	background-color:#c5cdd1;
 	display:none;
@@ -108,6 +117,38 @@ a{
 	text-align:center;
 	width:90px;
 }
+#list_body_info{
+	padding:30px 20px;
+}
+#list_body_info ul li{
+	font-size:9px;
+	color:#fff;
+	height:60px;
+}
+#list_body_info ul li div{
+	padding-left:40px;
+
+}
+#list_body_info ul li span.tel{
+	display:inline-block;
+	width:25px;
+	height:25px;
+	background:url('../images/tel.gif');
+}
+#list_body_info ul li span.address{
+	display:inline-block;
+	width:25px;
+	height:25px;
+	background:url('../images/address.gif');
+}
+#list_body_info ul li span.email{
+	display:inline-block;
+	width:25px;
+	height:25px;
+	background:url('../images/email.gif');
+}
+
+
 /*
 #nav_head ul li a{
 	display:block;
@@ -130,10 +171,16 @@ a{
 	float:left;
 	height:60px;
 	line-height:60px;
-	
+	padding-top:5px;
+	margin-right:20px;
 }
-
-
+#call_me ul li a{
+	display:inline-block;
+	width:20px;
+	height:20px;
+}
+#github{background:url('../images/github.gif');}
+#weibo{background:url('../images/weibo.gif');}
 /********主体内容**********/
 /****轮播图****/
 #rotation{
@@ -213,7 +260,7 @@ a{
 	color:#fff;
 }
 #content_resume p a:hover{
-	color:#4fc6f8
+	color:#4fc6f8;
 }
 
 #content_works{
@@ -250,27 +297,162 @@ a{
 #content_bottom .c_b{
 	float:left;
 }
+/***技术文贴部分***/
 #c_b_technology{
 	width:300px;
-	height:465px;
+	height:565px;
 	background:#fff;
+}
+/***技术文贴标题部分***/
+#c_b_t_header{
+	padding-left:20px;
+	height:65px;
+	line-height:65px;
+	border-bottom:1px solid #ccc;
+	color:#475055;
+}
+#changePage_btn{
+	//border:1px solid #000;
+	margin-top:30px;
+	margin-right:10px;
+}
+#changePage_btn ul li{
+	float:left;
+}
+#changePage_btn ul li span{
+	display:block;
+	width:11px;
+	height:11px;
+	margin-right:5px;
+	background:url('../images/change_btn1.gif') 0 0 no-repeat;
+	cursor:pointer;
+}
+#changePage_btn ul li span:hover{
+	background-image:url('../images/change_btn2.gif');
+}
+
+
+/***技术文贴内容部分***/
+#c_b_t_content ul li{
+	
+	height:100px;
+	//border-bottom:1px solid #ddd;
+
+}
+#c_b_t_content ul li span{
+	display:inline-block;
+	width:70px;
+	height:70px;
+	background:#787878;
+	margin:15px 10px;
+}
+#c_b_t_content ul li b{
+	margin-top:40px;
+	width:200px;
+	font-size:14px;
+	font-weight:normal;
+	display:block;
+	color:#60676c;	
+	word-wrap:break-word;
+}
+
+#c_b_t_content ul li b a:hover{
+	color:#ccc;
 }
 #c_b_somthings{
 	width:615px;
 	height:465px;
 	margin-left:15px;
 }
-#interset{
-	width:615px;
-	height:300px;
-	background:#fff;
+/***闲谈部分***/
+#interest{
+	width:575px;
+	height:360px;
+	background:#4fc6f8;
+	color:#fff;
+	padding:20px 20px;
 }
+#interest ul li{
+	//border:1px solid #fff;
+	margin-top:10px;
+	font-size:13px;
+	padding-top:5px;
+	border-top:1px solid #fff;
+}
+#interest ul li .interset_header span{
+	display:inline-block;
+	width:50px;
+	height:50px;
+	//background:#fff;
+	margin-right:10px;
+}
+#interest ul li .interset_header h4{
+	height:50px;
+	line-height:50px;
+}
+#spiderMan{background:url(../images/spiderMan.gif) 0 0 no-repeat;}
+#madilyn{background:url(../images/madilyn.gif) 0 0 no-repeat;}
+#byx{background:url(../images/byx.gif) 0 0 no-repeat;}
+#interset_header{position:relative;}
+.interest_md_pic{
+	position:absolute;
+	width:200px;
+	height:200px;
+	left:600px;
+	display:none;
+}
+#mdspiderMan{
+	background:url(../images/mdspiderMan.gif) 0 0 no-repeat;
+}
+#mdmadilyn{
+	background:url(../images/mdmadilyn.gif) 0 0 no-repeat;
+}
+#mdbyx{
+	background:url(../images/mdbyx.gif) 0 0 no-repeat;
+}
+#interest  ul li div{
+	padding-top:3px;
+	clear:right;
+}
+#interest  ul li div a{
+	color:#fff;
+}
+#interest  ul li div a:hover{
+	color:#1f3045;
+}
+
 #callMeBy{
 	margin-top:15px;
 	width:615px;
 	height:150px;
 	background:#fff;	
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
