update 0811 change a little pic

--- a/styles/index.css
+++ b/styles/index.css
@@ -343,7 +343,7 @@ a{
 	display:inline-block;
 	width:70px;
 	height:70px;
-	background:#787878;
+	background:url('../images/wenjian.gif');
 	margin:15px 10px;
 }
 #c_b_t_content ul li b{
