--- a/styles/index.css
+++ b/styles/index.css
@@ -242,6 +242,7 @@ a{
 #content_clndr{
 	width:300px;
 	height:300px;
+	background:#000;
 }
 #content_resume{
 	width:180px;
@@ -420,16 +421,80 @@ a{
 #interest  ul li div a:hover{
 	color:#1f3045;
 }
-
+/**表单部分**/
 #callMeBy{
 	margin-top:15px;
 	width:615px;
 	height:150px;
-	background:#fff;	
+	//background:#fff;	
 }
-
-
-
+#callMeBy input,#callMeBy textarea{
+	border:1px solid #fff;
+	color:#fff;
+	background-color:#152840;
+	border:none;
+}
+#callMeBy input{
+	width:190px;
+	height:40px;
+	line-height:40px;
+	margin-top:15px;
+	//margin-left:20px;
+	padding-left:10px;
+}
+#callMeBy .github{
+	margin-left:3px;
+}
+#callMeBy .question{
+	padding:10px;
+	width:470px;
+	height:60px;
+	//margin-left:20px;
+	margin-top:15px;
+}
+#callMeBy .submit{
+	width:100px;
+	height:40px;
+	//margin-right:50px;
+	margin-top:55px;
+	background:#ea6060;
+	color:#fff;
+	font-size:15px;
+	cursor:pointer;
+	border-radius:5px;
+	border:none;
+}
+/*****页面底部***/
+#footer{
+	margin-top:120px;
+	margin-left:200px;
+}
+#footer #shareBlog ul li{
+	float:left;
+	margin-left:30px;
+	color:#fff;
+} 
+#footer #shareBlog ul li a{
+	font-size:13px;
+	color:#4bc7c7;
+}
+#footer #shareBlog ul li a:hover{
+	text-decoration:underline;
+}
+/***生日快乐***/
+#HappyBirthday{
+	position:fixed;
+	left:0;
+	top:300px;
+	width:300px;
+	height:150px;
+	background:url('../images/birthday.gif') 0 0 no-repeat;
+	padding-top:155px;
+	padding-left:5px;
+	color:red;
+	font-family:"KaiTi";
+	display:none;
+}
 
 
 
