--- a/styles/index.css
+++ b/styles/index.css
@@ -4,7 +4,6 @@
 	list-style:none;
 	text-decoration:none;
 	font-family:"微软雅黑";
-
 }
 
 body{
@@ -18,7 +17,10 @@ body{
 .right{
 	float:right;
 }
-
+.trans{
+	transition:background 0.3s ease 0s,color 0.3s ease 0s,box-shadow 0.1s ease 0s,opacity 0.3s ease 0s;
+	//transition:color 0.3s ease 0s;
+}
 a{
 	color:#222;
 }
@@ -65,7 +67,6 @@ a{
 #list_body ul li.list_body_parent .list_body_head:hover{
 	background-color:#56ccc8;
 	color:#fff;
-	font-weight:bold;
 	cursor:pointer;
 }
 
@@ -75,6 +76,10 @@ a{
 	width:190px;
 	//text-align:center;
 	padding-left:50px;
+	opacity:0.9;
+}
+#list_body .list_body_body:hover{
+	opacity:1;
 }
 #list_body .list_body_body>ul li {
 	height:40px;
@@ -430,9 +435,13 @@ a{
 }
 #callMeBy input,#callMeBy textarea{
 	border:1px solid #fff;
-	color:#fff;
-	background-color:#152840;
+	color:#aaa;
+	background-color:#263a54;
 	border:none;
+}
+#callMeBy input:focus,#callMeBy textarea:focus{
+	background-color:#152840;
+	color:#fff;
 }
 #callMeBy input{
 	width:190px;
@@ -493,7 +502,7 @@ a{
 	padding-left:5px;
 	color:red;
 	font-family:"KaiTi";
-	//display:none;
+	display:none;
 }
 
 
