--- a/styles/IT_technology.css
+++ b/styles/IT_technology.css
@@ -87,7 +87,7 @@
 #content .wrap{
 	width:700px;
 	height:100%;
-	background:#fff;
+	background:#f9f9f9;
 }
 
 #content .wrap .article{
@@ -96,6 +96,8 @@
 	margin-top:30px;
 	margin-left:50px;
 	box-shadow:10px 10px 20px #bbb;
+	border-radius:10px;
+	background:#fff;
 	padding:30px;
 }
 #content .wrap .article h2{
